# reverse-traceroute

./: .gitignore  .gitmodules  AUTHORS  ENDPOINTS  Makefile  README.md
client/: Makefile  pyproject.toml
client/debian/: README.Debian  augsburg-traceroute-client.manpages  changelog  control  copyright  rules
client/docs/: augsburg-traceroute.adoc
client/scripts/: binarize  binarize.sh
client/src/: .client.py.swp  .container.py.swp  .graph.py.swp  .miner.py.swp  .traceroute.py.swp  Makefile  __init__.py  args.py  client.py  container.py  graph.py  miner.py  stats.py  traceroute.py  transmit.py
client/src/core/: __init__.py  apar.py  container.py  engine.py  mda.py  merge.py  probe_gen.py
scripts/: package_deb  package_deb.sh
server/: Dockerfile  Makefile  build_docker.sh
server/cfg/: allowed.txt  allowed_indirect.txt
server/debian/: README.Debian  augsburg-traceroute-server.augsburg-traceroute-server-v4@.service  augsburg-traceroute-server.augsburg-traceroute-server-v6@.service  augsburg-traceroute-server.install  augsburg-traceroute-server.manpages  changelog  control  copyright  rules
server/docs/: augsburg-traceroute-server.1  augsburg-traceroute-server.adoc
server/src/: .clang_format  Makefile  augsburg-traceroute-server-v4  augsburg-traceroute-server-v6  cidr.h  config.h  ipaddr.h  messages.h  netlist.h  tools.mk  traceroute.c
server/src/bpf/: Makefile  config.c  config.h  csum.c  csum.h  cursor.c  cursor.h  internal.h  ip_generic.h  logging.c  logging.h  probe.c  probe.h  proto.h  (+13 more)
testlab/: Makefile  Vagrantfile  run_test.sh  test.py
(+25 files in other folders)
