[tool.poetry]
name = "augsburg-traceroute-client"
version = "0.1.0"
description = "Multipath (reverse) traceroute client"
authors = ["Valentin Heinrich <v.heinrich99@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.4.5"
graphviz = "^0.20.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
augsburg-traceroute = 'src.client:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
